@@ -46,9 +46,9 @@ namespace Yafc {
         public string language { get; set; } = "en";
         public string overrideFont { get; set; }
 
-        public void AddProject(string path, string dataPath, string modsPath, bool expensiveRecipes) {
+        public void AddProject(string path, string dataPath, string modsPath, bool expensiveRecipes, bool netProduction) {
             recentProjects = recentProjects.Where(x => string.Compare(path, x.path, StringComparison.InvariantCultureIgnoreCase) != 0)
-                .Prepend(new ProjectDefinition { path = path, modsPath = modsPath, dataPath = dataPath, expensive = expensiveRecipes }).ToArray();
+                .Prepend(new ProjectDefinition { path = path, modsPath = modsPath, dataPath = dataPath, expensive = expensiveRecipes, netProduction = netProduction }).ToArray();
             Save();
         }
     }
@@ -58,5 +58,6 @@ namespace Yafc {
         public string dataPath { get; set; }
         public string modsPath { get; set; }
         public bool expensive { get; set; }
+        public bool netProduction { get; set; }
     }
 }
